--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <ol>
     {% assign posts = site.posts | where: "series", page.series | sort: "date" %}
     {% for post in posts %}
-    <li>{% if post.url == page.url %}{{ post.title }} <i>(this post)</i>{% else %}
+    <li>{% if post.url == page.url %}<strong>{{ post.title }} <i>(this post)</i></strong>{% else %}
         <a href="{{ post.url }}">{{ post.title }}</a>{% endif %}</li>
     {% endfor %}
   </ol>
